--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="UTF-8">
@@ -12,6 +13,8 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            <h1>hello world</h1>
+        {% endblock %}
     </body>
 </html>
