--- a/templates/test.html.twig
+++ b/templates/test.html.twig
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    {{include('./partials/_profile.html.twig',{user: author})}}
+
 {# 
 app.user
 app.debug
