--- a/templates/page1.html.twig
+++ b/templates/page1.html.twig
@@ -1,26 +1,28 @@
 {% extends "./layout.html.twig" %}
 
 {% block content %}
-
-<style>
+{# 
+/* <style>
 .my-custom-row{
     display:flex;
     flex-direction:column;
 }
-</style>
+</style> */ #}
 
-{{form_start(myform,{'method':'get', 'attr': {'class':'my_form'}})}}
+{{form_start(myform)}}
+
+{% form_theme myform 'bootstrap_5_horizontal_layout.html.twig' %}
 
 {# {{form_row(myform.pays, {'row_attr':{'class': 'myrowclass2'}})}} #}
-<div class="my-custom-row">
+{# <div class="my-custom-row">
     {{form_label(myform.pays, 'Mon Label')}}
     
     {{form_widget(myform.pays)}}
     {# {{form_help(myform.pays)}} #}
-</div>
+{# </div>
 <ul>
     {{form_errors(myform.pays)}}
-</ul>
+</ul>  #}
 
 {{form_end(myform)}}
 
