--- a/templates/page1.html.twig
+++ b/templates/page1.html.twig
@@ -8,10 +8,75 @@
     flex-direction:column;
 }
 </style> */ #}
+    <style>
+        .form-container{
+            display:flex;
+            flex-flow:column;
+        }
+
+        .form-row{
+            margin-bottom:15px;
+            display:flex;
+            flex-flow:column;
+
+        }
+
+        .form-row label{
+            font-weight: 700;
+            font-size:14px;
+            margin-bottom:5px;
+
+        }
+
+        .form-row input {
+            background: #eee;
+            border:0;
+            border-radius:3px;
+            padding: 10px 15px;
+        }
+        
+        .form-row select {
+            padding : 10px 15px;
+        }
+
+        .btn {
+            padding:10px 15px;
+            border:0;
+            border-radius:3px;
+            background: #3498db;
+            color:white;
+        }
+        .form-row ul{
+            list-style:none;
+            padding-left:0px;
+            margin-top:5px;
+        }
+        .form-row ul li{
+            color: red;
+            font-size:12px;
+            font-weight: 700;
+        }
+    </style>
 
 {{form_start(myform)}}
+    <div class="form-container">
+        {{ form_row(myform.content, {'row_attr': {'class': 'form-row'}}) }}
+        {{ form_row(myform.pays, {'row_attr': {'class': 'form-row'}}) }}
 
-{% form_theme myform 'bootstrap_5_horizontal_layout.html.twig' %}
+        {# <div class="form-row">
+            {{form_label(myform.content)}}
+            {{form_widget(myform.content)}}
+            {{form_errors(myform.content)}}
+        </div>   
+         <div class="form-row">
+            {{form_label(myform.pays)}}
+            {{form_widget(myform.pays)}}
+            {{form_errors(myform.pays)}}
+        </div>   #}
+        <button type='submit' class='btn btn-primary'>Sauvegarder</button>        
+    </div>
+
+{# {% form_theme myform 'bootstrap_5_horizontal_layout.html.twig' %} #}
 
 {# {{form_row(myform.pays, {'row_attr':{'class': 'myrowclass2'}})}} #}
 {# <div class="my-custom-row">
