--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,23 @@
 body {
-    margin:0;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background: whitesmoke;
-}
-
-header{
-    background-color: blueviolet;
-
-}
-
-.main-container {
+    margin: 0;
+    box-sizing: content-box;
+  }
+  
+  .main-container {
     flex: 1;
-}
-
-footer{
-    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  header {
+    background-color: red;
+  }
+  
+  footer {
+    background-color: black;
     color: white;
-}
+  }
