--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>
-  {% block title %}Titre de base
-  {% endblock %}
-</title>
-{% block stylesheets %}
-  <link rel="stylesheet" type="text/css" href="{{asset('css/style.css')}}"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-{% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Titre de base
+			{% endblock %}
+		</title>
+		{% block stylesheets %}
+			<link rel="stylesheet" type="text/css" href="{{asset('css/style.css')}}"/>
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		{% endblock %}
 
-{% block javascripts %}
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-{% endblock %}
-</head>
-<body>
-<header>Je suis le header</header>
-<div class="main-container">
-  {% block body %}
-    <h1>Test</h1>
-  {% endblock %}
-</div>
-<footer>Je suis le footer</footer>
-</body>
+		{% block javascripts %}
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+		{% endblock %}
+    <style>
+      .flash-success {
+        background:green;
+        color:white;
+      }
+    </style>
+	</head>
+	<body>
+		<header>Je suis le header</header>
+		<div class="main-container">
+			{% block body %}
+				<h1>Test</h1>
+			{% endblock %}
+
+      {% for messages in app.flashes('success') %}
+        <div class="flash-success">
+          {{messages}}
+        </div>
+        
+      {% endfor %}
+      
+		</div>
+		<footer>Je suis le footer</footer>
+	</body>
 </html>
