--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -11,6 +11,8 @@
 				<span>{{todo.done}}</span>
 				<span>{{todo.createdat | date()}}</span>
 				<a href="{{path('todo_edit', {id: todo.id})}}">Edit</a>
+				<a href="{{path('todo_remove', {id: todo.id})}}">Suprimer</a>
+
 			</li>
 		{% endfor %}
 	</ul>
